--- a/index.html
+++ b/index.html
@@ -388,8 +388,9 @@
 
         <!-- Hero Image -->
         <div class="hero-image-container">
-            <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=800&h=800&fit=crop" alt="Modelo Velvet Queen" class="hero-image">
+            <img src="Gemini_Generated_Image_n20b90n20b90n20b.png" alt="Modelo Velvet Queen" class="hero-image" style="display:block;margin:0 auto;">
             <div class="image-sparkles">✨</div>
+
         </div>
 
         <!-- Benefits Section -->
